tests/typechecker/should_pass/productions_empty_dot_list.csp
channel z

Z = productions(z)
