tests/typechecker/should_fail/timed_priority_2.csp
P = timed_priority(STOP)
